<resources>
    <string name="app_name">Find&amp;Fix</string>
    <string name="label_login_find_fix">Login to Find and fix</string>
    <string name="label_register_find_fix">Login to Find and fix</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="action_login">Login</string>
    <string name="action_next">Next</string>
    <string name="action_choose_location">Choose Location</string>
    <string name="action_select_location">Select Location</string>
    <string name="action_choose_image">Choose Image</string>
    <string name="action_choose_video">Choose Video</string>
    <string name="action_register">Register</string>
    <string name="label_forgot_password">I forgot password?</string>
    <string name="label_new_user">New user Sign up</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="start_journey">We hope you to have a satisfied journey</string>
    <string name="journey">Find &amp; Fix is a journey Just Start Engine</string>
    <string name="choose_camera">Choose Picture From Camera</string>
    <string name="choose_gallery">Choose Picture From Gallery</string>
    <string name="start_engine">Start</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="hint_car_brand">Car brand</string>
    <string name="hint_model">Model</string>
    <string name="hint_year">Year</string>
    <string name="label_upload_photo">Please upload your profile photo</string>
    <string name="label_upload">Upload</string>
    <string name="label_check_mail">Check Your Email to Activate Your Account</string>
    <string name="label_for_more_details">For more details visit</string>
    <string name="label_description">Description</string>
    <string name="offer_info">Offer info</string>
    <string name="label_work_shop_info">Workshop info</string>
    <string name="label_find_fix_site">www.Findandfix.com</string>
    <string name="label_start_engine">Start Engine</string>
    <string name="label_urgent_request">Add Urgent Request</string>
    <string name="label_add_request">Add Request</string>
    <string name="label_offers">Offers</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_requests">Requests</string>
    <string name="label_normal_request">Add Request</string>
    <string name="label_normal_request_2">Add Request</string>
    <string name="label_add_advertising">Add advertising</string>
    <string name="label_car_info">Car Info</string>
    <string name="action_yes">Yes</string>
    <string name="action_no_another">No, another car</string>
    <string name="label_choose_brand">Choose Brand</string>
    <string name="label_choose_model">Choose Model</string>
    <string name="label_choose_year">Choose Year</string>
    <string name="label_year">Year</string>
    <string name="label_car">Car</string>
    <string name="label_problem">Problem</string>
    <string name="label_location">Location</string>
    <string name="label_images">Images</string>
    <string name="label_notes">Notes</string>
    <string name="label_choose_problem">Choose your problem</string>
    <string name="label_upload_car_images">Upload your car images</string>
    <string name="label_upload_car_videos">Upload your car Videos</string>
    <string name="hint_write_car_notes">Write your notes about your car</string>
    <string name="label_average_price">Average Price</string>
    <string name="label_work_shop_offer">Workshop Offer</string>
    <string name="label_step_one">Step 1 of 3</string>
    <string name="label_step_two">Step 2 of 3</string>
    <string name="label_step_three">Step 3 of 3</string>
    <string name="waiting_workshops">Waiting Search for Workshops</string>
    <string name="msg_fill_data">Please fill data</string>
    <string name="msg_invalid_email_password">Wrong email or password</string>
    <string name="msg_invalid_data">Wrong data</string>
    <string name="msg_internet_connection">Check internet connection</string>
    <string name="label_choose_country">Choose Country</string>
    <string name="label_choose_city">Choose City</string>
    <string name="msg_select_country">Please select country</string>
    <string name="label_select_action">Select Action</string>
    <string name="label_select_gallery">Select photo from Gallery</string>
    <string name="label_select_camera">Capture photo from Camera</string>
    <string name="action_done">Done</string>
    <string name="label_rights">All right received © Find&amp;Fix</string>
    <string name="label_home">Home</string>
    <string name="label_settings">Settings</string>
    <string name="label_share">Share</string>
    <string name="label_rate">Rate us</string>
    <string name="about_find_fix">About Find&amp;Fix</string>
    <string name="label_pic_location">Please pic your location </string>
    <string name="label_choose_type">Please Choose Your problem type</string>
    <string name="label_gas">Gas</string>
    <string name="label_tire">Tire</string>
    <string name="label_towed">Towed</string>
    <string name="label_battery">Battery</string>
    <string name="hint_type_message">Type here your message</string>
    <string name="label_tell_notes">Please tell us your notes about your problem</string>
    <string name="action_send">Send</string>
    <string name="label_please_hold">Please hold microphone to record your message</string>
    <string name="label_today">Today</string>
    <string name="label_normal_requests">Normal Requests</string>
    <string name="label_urgent_requests">Urgent Requests</string>
    <string name="label_distance">Distance</string>
    <string name="label_km">Km</string>
    <string name="action_accept">Accept Offer</string>
    <string name="label_your_record">Your record</string>
    <string name="all_rights_recieved_findandfix_2018">All rights recieved FindandFix 2018</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="send_to">Send To</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="find_fix"><![CDATA[Find & Fix]]></string>
    <string name="select_time">Select Time</string>
    <string name="type_your_message_here">Type Your Message here</string>
    <string name="chat">Chat</string>
    <string name="about">About</string>
    <string name="cant_complete_request">Can\'t Complete Your Request</string>
    <string name="email">Email</string>
    <string name="required_field">This Field is Required</string>
    <string name="invalid_email_format">Invalid Email Format</string>
    <string name="password_length">Minimum Required Length for password is 8 character</string>
    <string name="password_confirm_not_match">Password and it\'s Confirmation must be matches</string>
    <string name="exist_email">This Email Already Exist</string>
    <string name="choose_brands">Please Select Your Brands First</string>
    <string name="label_step_2">Step 2 of 3</string>
    <string name="label_step_3">Step 3 of 3</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="choose_image">Please Choose Image First</string>
    <string name="invalid_data">Invalid Data Format Please ensure that all Data is valid</string>
    <string name="invalid_phone_number">Mobile Number Already Taken</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="car_information">Car Information</string>
    <string name="brand">Car Brand</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_update_successfully">Profile Updated Successfully</string>
    <string name="unauthenticated">This is account is logged in from another device</string>
    <string name="please_write_your_current_password">Please Write Your Current Password</string>
    <string name="save">Save</string>
    <string name="matches_password">Password and It\'s Confirmation must be matches</string>
    <string name="password_updated">Password Updasted Successfully</string>
    <string name="invalid_current_password">Current Password is Invalid</string>
    <string name="cant_complete_your_request">Can\'t Complete Your Request</string>
    <string name="data_matches"><![CDATA[Data Of Model & City Must Match to it\'s parents]]></string>
    <string name="no_desc_available">No Description Available</string>
    <string name="offer_detail">Offer Detail</string>
    <string name="are_you_want_to_make_this_request">Are you want to make this Request</string>
    <string name="for_this_car_label">for this car</string>
    <string name="add_request">Add Request</string>
    <string name="select_your_problem">Select Your Problem</string>
    <string name="select_specialization">Select Specialization</string>
    <string name="select_specialize_first">Please Select Specialize First</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="maximum_image_number">Maximum Number Of Image is 5</string>
    <string name="select_video">Select Video</string>
    <string name="uploading_videos">Uploading Videos</string>
    <string name="uploading_pictures">Uploading Pictures</string>
    <string name="server_error">Server Error please Try Again Later</string>
    <string name="waiting">Waiting</string>
    <string name="search_for_workshop">Search For Workshop</string>
    <string name="find_request">Find Request</string>
    <string name="distance">Distance</string>
    <string name="workshop_offer">Workshop Offer</string>
    <string name="workshop_name">Workshop Name</string>
    <string name="achievments">Achievments</string>
    <string name="accept_offer">Accept Offer</string>
    <string name="unuthenticated">UnUthenticated</string>
    <string name="sar">SAR</string>
    <string name="km">Km</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="today">Today</string>
    <string name="urgent_request_text">Urgent Request</string>
    <string name="normal_request_text">Normal Request</string>
    <string name="average_price">Avg Price</string>
    <string name="average_time">Average Time</string>
    <string name="rate_label">Rate</string>
    <string name="no_desc">There is No Description</string>
    <string name="show_location">Show Location</string>
    <string name="start_chat">Start Chat</string>
    <string name="my_orders">My Orders</string>
    <string name="you_can_active_your_account_by_mobile">you can active your account by mobile</string>
    <string name="active_by_mobile">Active By Mobile</string>
    <string name="nearest_workshop">Nearest Workshop</string>
</resources>