<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_register_2_next"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_register_2_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp20w"
                android:layout_marginStart="@dimen/dp20w"
                android:background="@drawable/et_border_background"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:paddingBottom="@dimen/dp5h"
                android:paddingStart="@dimen/dp15w"
                android:paddingTop="@dimen/dp5h" />

            <EditText
                android:id="@+id/et_register_2_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp20w"
                android:layout_marginStart="@dimen/dp20w"
                android:layout_marginTop="@dimen/dp15h"
                android:background="@drawable/et_border_background"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:paddingBottom="@dimen/dp5h"
                android:paddingStart="@dimen/dp15w"
                android:paddingTop="@dimen/dp5h" />

            <EditText
                android:id="@+id/et_register_2_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp20w"
                android:layout_marginStart="@dimen/dp20w"
                android:layout_marginTop="@dimen/dp15h"
                android:background="@drawable/et_border_background"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:paddingBottom="@dimen/dp5h"
                android:paddingStart="@dimen/dp15w"
                android:paddingTop="@dimen/dp5h" />

            <EditText
                android:id="@+id/et_register_2_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp20w"
                android:layout_marginStart="@dimen/dp20w"
                android:layout_marginTop="@dimen/dp15h"
                android:background="@drawable/et_border_background"
                android:hint="@string/hint_country"
                android:inputType="textPersonName"
                android:paddingBottom="@dimen/dp5h"
                android:paddingStart="@dimen/dp15w"
                android:paddingTop="@dimen/dp5h" />

            <EditText
                android:id="@+id/et_register_2_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp20w"
                android:layout_marginStart="@dimen/dp20w"
                android:layout_marginTop="@dimen/dp15h"
                android:background="@drawable/et_border_background"
                android:hint="@string/hint_city"
                android:inputType="textPersonName"
                android:paddingBottom="@dimen/dp5h"
                android:paddingStart="@dimen/dp15w"
                android:paddingTop="@dimen/dp5h" />

            <EditText
                android:id="@+id/et_register_2_car_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp20w"
                android:layout_marginStart="@dimen/dp20w"
                android:layout_marginTop="@dimen/dp15h"
                android:background="@drawable/et_border_background"
                android:hint="@string/hint_car_brand"
                android:inputType="textPersonName"
                android:paddingBottom="@dimen/dp5h"
                android:paddingStart="@dimen/dp15w"
                android:paddingTop="@dimen/dp5h" />

            <EditText
                android:id="@+id/et_register_2_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp20w"
                android:layout_marginStart="@dimen/dp20w"
                android:layout_marginTop="@dimen/dp15h"
                android:background="@drawable/et_border_background"
                android:hint="@string/hint_model"
                android:inputType="textPersonName"
                android:paddingBottom="@dimen/dp5h"
                android:paddingStart="@dimen/dp15w"
                android:paddingTop="@dimen/dp5h" />

            <EditText
                android:id="@+id/et_register_2_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp20w"
                android:layout_marginStart="@dimen/dp20w"
                android:layout_marginTop="@dimen/dp15h"
                android:background="@drawable/et_border_background"
                android:hint="@string/hint_year"
                android:inputType="textPersonName"
                android:paddingBottom="@dimen/dp5h"
                android:paddingStart="@dimen/dp15w"
                android:paddingTop="@dimen/dp5h" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_register_2_next"
        android:layout_width="@dimen/dp130w"
        android:layout_height="@dimen/dp30h"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp30h"
        android:background="@drawable/btn_border_background"
        android:text="@string/action_next"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />
</RelativeLayout>


