<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
<variable
    name="viewmodel"
    type="findandfix.viewmodel.ActivateAccountViewModel"/>
</data>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueDark"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_active_mail_logo"
        android:layout_width="@dimen/dp170w"
        android:layout_height="@dimen/dp90h"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp15h"
        android:src="@drawable/img_find_fix_logo" />

    <TextView
        android:id="@+id/tv_active_mail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_active_mail_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp10h"
        android:text="@string/label_check_mail"
        android:textColor="@color/colorWhite" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_animation_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@+id/tv_active_mail_text"
        android:layout_above="@+id/tv_active_mail_more"
        app:lottie_autoPlay="true"
        app:lottie_fileName="mailLoading.json"
        app:lottie_loop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp7_5"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/colorWhiteLevel3"
        android:gravity="center_horizontal"
        android:layout_above="@+id/btn_active_mobile"
        android:layout_centerHorizontal="true"
        android:text="@string/you_can_active_your_account_by_mobile"
        />
    
    <Button
        android:id="@+id/btn_active_mobile"
        android:layout_width="@dimen/dp130h"
        android:layout_height="@dimen/dp30h"
        android:text="@string/active_by_mobile"
        android:textColor="@color/colorPrimary"
        android:layout_above="@+id/tv_active_mail_more"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp6w"
       android:background="@drawable/btn_activate_mobile_background"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/sp12"
        android:onClick="@{viewmodel::activeByMobile}"/>
    <TextView
        android:id="@+id/tv_active_mail_more"
        android:layout_above="@+id/tv_active_mail_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp10h"
        android:text="@string/label_for_more_details"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/tv_active_mail_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_find_fix_site"
        android:layout_marginBottom="@dimen/dp15h"
        android:textColor="@color/colorWhite" />

</RelativeLayout>

</layout>
